fixed bug for not going to highscores page on submit of score

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <p>Result: <span id="answerResult"></span></p>
       <p>Score: <span id="score">100</span></p>
     </div>
-    <form id="resultsForm" method="POST">
+    <form id="resultsForm" method="POST" >
       <h2>All Done!</h2>
       <p>Your final score is: <span id="finalScore">0</span></p>
       <label for="initialsText">Enter your initials:</label>
       <input type="text" name="initialsText" id="initialsText" />
       <!-- <a href="highscores.html"><button id="submitScore">Submit</button></a> -->
-      <a class="nav-link" href="contact.html"><button id="submitScore">Submit</button></a>
+      <button id="submitScore">Submit</button>
     </form>
 
     <script src="questions.js"></script>
