added user notification for incorrect initials and const for scores storage name

--- a/highscores.html
+++ b/highscores.html
@@ -36,6 +36,7 @@
         <div class="col-md-4"></div>
       </div>
     </div>
+    <script src="quiz-consts.js"></script>
     <script src="scores.js"></script>
   </body>
 </html>
