--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <!-- container -->
 
-    <script src="questions.js"></script>
+    <script src="quiz-consts.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
