tidied code, added further comments

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,6 +27,7 @@
         <!-- only 1 row -->
         <div class="col-md-2"></div>
         <div class="col-md-8">
+          <!-- 4 dives in the column that are shown/hidden as required -->
           <div class="welcome" id="welcome">
             <h2>Coding Quiz Challenge</h2>
             <br />
