--- a/Develop/highscores.html
+++ b/Develop/highscores.html
@@ -25,7 +25,7 @@
 
       <!-- high scores row -->
       <div class="row" id="rwContentArea">
-        <!-- only 1 row -->
+        <!-- set row up with empty columns either side of content -->
         <div class="col-md-3"></div>
         <div class="col-md-6 scores">
           <h3>High Scores</h3>
